--- a/components/closeButton.html
+++ b/components/closeButton.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Close button</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Close button</h1><small>檔名：<code>closeButton.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Close button</h1><small > 檔名：<code>closeButton.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Example</h2>
-<p>提供一個選項，透過 <code>.btn-close</code> 以關閉或解除元件。</p>
+<p> 提供一個選項，透過 <code>.btn-close</code> 以關閉或解除元件。</p>
 
 <div class="demo">
-  <button type="button" class="練習" aria-label="Close"></button>
+  <button type="button" class="btn-close" aria-label="Close"></button>
 </div>
 
 <h2>Disabled state</h2>
 
 <div class="demo">
-  <button type="button" class="btn-close" 練習 aria-label="Close"></button>
+  <button type="button" class="btn-close" disabled aria-label="Close"></button>
 </div>
 
 <h2>White variant</h2>
-<p>透過 <code>.btn-close-white</code> 類別將預設的 <code>.btn-close</code> 改為白色。</p>
+<p> 透過 <code>.btn-close-white</code> 類別將預設的 <code>.btn-close</code> 改為白色。</p>
 
 <div class="demo bg-dark">
-  <button type="button" class="btn-close 練習" aria-label="Close"></button>
-  <button type="button" class="btn-close 練習" disabled aria-label="Close"></button>  
+  <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
+  <button type="button" class="btn-close btn-close-white" disabled aria-label="Close"></button>  
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -203,7 +203,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -216,7 +216,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -244,7 +244,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
