--- a/components/collapse.html
+++ b/components/collapse.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Collapse</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Collapse</h1><small>檔名：<code>collapse.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Collapse</h1><small > 檔名：<code>collapse.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Example</h2>
-<p>點擊以下按鈕，透過改變 Class 來顯示及隱藏另一個元素：</p>
+<p> 點擊以下按鈕，透過改變 Class 來顯示及隱藏另一個元素：</p>
 <ul>
   <li><code>.collapse</code> 隱藏內容。</li>
   <li><code>.collapsing</code> 會在轉換的過程中被套用。</li>
   <li><code>.collapse.show</code> 顯示內容。</li>
 </ul>
 
-<p>基本使用方式：</p>
+<p> 基本使用方式：</p>
 
 <ul>
-  <li>按鈕加上 data-bs-toggle="collapse"</li>
-  <li>加上 href 或 data-bs-target 來對應項目</li>
+  <li> 按鈕加上 data-bs-toggle="collapse"</li>
+  <li> 加上 href 或 data-bs-target 來對應項目 </li>
 </ul>
 
 <div class="demo">
   <p>
-    <a class="btn btn-primary" data-bs-toggle="練習" 練習 role="button" aria-expanded="false"
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
       aria-controls="collapseExample">
       Link with href
     </a>
-    <button class="btn btn-primary" type="button" data-bs-toggle="練習" 練習
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
       aria-expanded="false" aria-controls="collapseExample">
       Button with data-bs-target
     </button>
@@ -44,7 +44,7 @@
   <p>
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="練習" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
   </p>
   <div class="row">
     <div class="col">
@@ -244,7 +244,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -257,7 +257,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -285,7 +285,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
