--- a/components/dropdowns.html
+++ b/components/dropdowns.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Dropdowns</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Dropdowns</h1><small>檔名：<code>dropdowns.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Dropdowns</h1><small > 檔名：<code>dropdowns.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Examples</h2>
 
 <h4>Single button</h4>
-<p>在 <code>.dropdown</code> 中包裝下拉選單的切換（你的按鈕或連結）和下拉式功能表，或者另外一個聲明 <code>position：relative;</code> 的元素。 可以從 <code>&lt;a&gt;</code> 或 <code>&lt;button&gt;</code> 元素裡觸發下拉選單</p>
+<p> 在 <code>.dropdown</code> 中包裝下拉選單的切換（你的按鈕或連結）和下拉式功能表，或者另外一個聲明 <code>position：relative;</code> 的元素。 可以從 <code>&lt;a&gt;</code> 或 <code>&lt;button&gt;</code> 元素裡觸發下拉選單 </p>
 
 <ul>
-  <li>按鈕外層加上 .dropdown</li>
-  <li>按鈕加上 .dropdown-toggle</li>
-  <li>下拉選單項目為 .dropdown-menu</li>
-  <li>按鈕加上 data-bs-toggle="dropdown"</li>
+  <li> 按鈕外層加上 .dropdown</li>
+  <li> 按鈕加上 .dropdown-toggle</li>
+  <li> 下拉選單項目為 .dropdown-menu</li>
+  <li> 按鈕加上 data-bs-toggle="dropdown"</li>
 </ul>
 
 <div class="demo">
-  <div class="練習">
-    <button class="btn btn-secondary 練習" type="button" id="dropdownMenuButton1" 練習 aria-expanded="false">
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"0 aria-expanded="false">
       Dropdown button
     </button>
-    <ul class="練習" aria-labelledby="dropdownMenuButton1">
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -27,25 +27,7 @@
   </div>
 </div>
 
-<p>透過 <code>&lt;a&gt;</code>：</p>
-
-<div class="demo">
-  <div class="練習">
-    <a class="btn btn-secondary 練習" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown link
-    </a>
-    
-    <ul class="練習" aria-labelledby="dropdownMenuLink">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-    </ul>
-  </div>
-</div>
-
-<h4>尺寸</h4>
-
-<p>按鈕下拉選單可以使用所有尺寸的按鈕，包括預設及分割下拉按鈕(套用 btn-sm, btn-lg) 。</p>
+<p> 透過 <code>&lt;a&gt;</code>：</p>
 
 <div class="demo">
   <div class="dropdown">
@@ -61,13 +43,31 @@
   </div>
 </div>
 
+<h4> 尺寸 </h4>
+
+<p> 按鈕下拉選單可以使用所有尺寸的按鈕，包括預設及分割下拉按鈕 (套用 btn-sm, btn-lg) 。</p>
+
+<div class="demo">
+  <div class="dropdown">
+    <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown link
+    </a>
+    
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+    </ul>
+  </div>
+</div>
+
 <h4>Split button</h4>
-<p>添加了 <code>.dropdown-toggle-split</code> 以在下拉插入符號做適當間隔</p>
+<p> 添加了 <code>.dropdown-toggle-split</code> 以在下拉插入符號做適當間隔 </p>
 
 <div class="demo">
   <div class="btn-group">
     <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-primary dropdown-toggle 練習" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
       <span class="visually-hidden">Toggle Dropdown</span>
     </button>
     <ul class="dropdown-menu">
@@ -133,14 +133,14 @@
 </div>
 
 <h2>Dark dropdowns</h2>
-<p>透過在目前現有的 <code>.dropdown-menu</code> 增加 <code>.dropdown-menu-dark</code> 屬性</p>
+<p> 透過在目前現有的 <code>.dropdown-menu</code> 增加 <code>.dropdown-menu-dark</code> 屬性 </p>
 
 <div class="demo">
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
       Dropdown button
     </button>
-    <ul class="dropdown-menu 練習" aria-labelledby="dropdownMenuButton2">
+    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
       <li><a class="dropdown-item active" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -153,10 +153,10 @@
 <h2>Directions</h2>
 <h4>Dropup</h4>
 
-<p>可以加上 dropup, dropend, dropstart 改變方向性</p>
+<p> 可以加上 dropup, dropend, dropstart 改變方向性 </p>
 
 <div class="demo">
-  <div class="btn-group 練習">
+  <div class="btn-group dropup">
     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       改變指向方向
     </button>
@@ -168,7 +168,7 @@
       <li><a class="dropdown-item" href="#">Separated link</a></li>
     </ul>
   </div>
-  <div class="btn-group 練習">
+  <div class="btn-group dropstart">
     <button type="button" class="btn btn-secondary">
       Split dropup
     </button>
@@ -186,7 +186,7 @@
 </div>
 
 <h2>Menu items</h2>
-<p>可以選擇在下拉選單中使用 <code>&lt;button&gt;</code> 元素，而不是僅使用 <code>&lt;a&gt;</code>。</p>
+<p> 可以選擇在下拉選單中使用 <code>&lt;button&gt;</code> 元素，而不是僅使用 <code>&lt;a&gt;</code>。</p>
 
 <div class="demo">
   <div class="dropdown">
@@ -194,18 +194,19 @@
       Dropdown
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-      <li><練習 class="dropdown-item" type="button">Action</練習></li>
-      <li><練習 class="dropdown-item" type="button">Another action</練習></li>
-      <li><練習 class="dropdown-item" type="button">Something else here</練習></li>
+      <li><button class="dropdown-item" type="button">Action</button ></li>
+      <li><button class="dropdown-item" type="button">Another action</button ></li>
+      <li><button class="dropdown-item" type="button">Something else here</button ></li>
     </ul>
   </div>
 </div>
 
-<p>可以使用 <code>.dropdown-item-text</code> 創建非交互式下拉選單</p>
+<p> 可以使用 <code>.dropdown-item-text</code> 創建非交互式下拉選單 </p>
 
 <div class="demo">
   <ul class="dropdown-menu" style="display: block; position: initial;">
-    <li><span class="練習">Dropdown item text</span></li>
+    <!-- 這一個 li 沒有 hover 效果 -->
+    <li><span class="dropdown-item-text">Dropdown item text</span></li>
     <li><a class="dropdown-item" href="#">Action</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
     <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -217,7 +218,7 @@
 <div class="demo">
   <ul class="dropdown-menu" style="display: block; position: initial;">
     <li><a class="dropdown-item" href="#">Regular link</a></li>
-    <li><a class="dropdown-item 練習" href="#" aria-current="true">Active link</a></li>
+    <li><a class="dropdown-item active" href="#" aria-current="true">Active link</a></li>
     <li><a class="dropdown-item" href="#">Another link</a></li>
   </ul>
 </div>
@@ -227,20 +228,20 @@
 <div class="demo">
   <ul class="dropdown-menu" style="display: block; position: initial;">
     <li><a class="dropdown-item" href="#">Regular link</a></li>
-    <li><a class="dropdown-item 練習" href="#" tabindex="-1" aria-disabled="true">Disabled link</a></li>
+    <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Disabled link</a></li>
     <li><a class="dropdown-item" href="#">Another link</a></li>
   </ul>
 </div>
 
 <h2>Menu alignment</h2>
-<p>在預設的情況下，下拉選單會自動從父選單的頂部與左邊開始定位 100％。將因此若將 <code>.dropdown-menu-end</code> 加入至 <code>.dropdown-menu</code> 則會使下拉選單靠右對齊</p>
+<p> 在預設的情況下，下拉選單會自動從父選單的頂部與左邊開始定位 100％。將因此若將 <code>.dropdown-menu-end</code> 加入至 <code>.dropdown-menu</code> 則會使下拉選單靠右對齊 </p>
 
 <div class="demo">
   <div class="btn-group">
     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Right-aligned menu example
     </button>
-    <ul class="dropdown-menu 練習">
+    <ul class="dropdown-menu dropdown-menu-end">
       <li><button class="dropdown-item" type="button">Action</button></li>
       <li><button class="dropdown-item" type="button">Another action</button></li>
       <li><button class="dropdown-item" type="button">Something else here</button></li>
@@ -249,14 +250,15 @@
 </div>
 
 <h4>Responsive alignment</h4>
-<p>如果要使用響應式對齊，請增加 <code>data-display="static"</code> 屬性來禁用動態定位，並使用響應式變數類別。</p>
-<p>如果要讓在特定斷點以上讓下拉選單靠 <b>右</b> 對齊，請加上 <code>.dropdown-menu{-sm|-md|-lg|-xl}-end</code>。</p>
+<p> 如果要使用響應式對齊，請增加 <code>data-display="static"</code> 屬性來禁用動態定位，並使用響應式變數類別。</p>
+<p> 如果要讓在特定斷點以上讓下拉選單靠 <b > 右 </b> 對齊，請加上 <code>.dropdown-menu {-sm|-md|-lg|-xl}-end</code>。</p>
   
 <div class="demo">
   <div class="btn-group">
     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
       Left-aligned but right aligned when large screen
     </button>
+    <!-- 電腦向右 手機靠左 -->
     <ul class="dropdown-menu dropdown-menu-lg-end">
       <li><button class="dropdown-item" type="button">Action</button></li>
       <li><button class="dropdown-item" type="button">Another action</button></li>
@@ -265,13 +267,14 @@
   </div>
 </div>
 
-<p>如果要讓在特定斷點以上讓下拉選單靠 <b>左</b> 對齊，請加上 <code>.dropdown-menu-end</code> 和 <code>.dropdown-menu{-sm|-md|-lg|-xl}-start</code>。</p>
+<p> 如果要讓在特定斷點以上讓下拉選單靠 <b > 左 </b> 對齊，請加上 <code>.dropdown-menu-end</code> 和 <code>.dropdown-menu {-sm|-md|-lg|-xl}-start</code>。</p>
 
 <div class="demo">
   <div class="btn-group">
     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
       Right-aligned but left aligned when large screen
     </button>
+    <!-- 電腦向左 手機靠右 -->
     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
       <li><button class="dropdown-item" type="button">Action</button></li>
       <li><button class="dropdown-item" type="button">Another action</button></li>
@@ -280,7 +283,7 @@
   </div>
 </div>
 
-<h4>各種對齊範例</h4>
+<h4> 各種對齊範例 </h4>
 
 <div class="demo">
   <div class="btn-group mb-2">
@@ -359,11 +362,11 @@
 
 <h4>Headers</h4>
 
-<p>使用 .dropdown-header 為列表加入標頭</p>
+<p> 使用 .dropdown-header 為列表加入標頭 </p>
 
 <div class="demo">
   <ul class="dropdown-menu" style="display: block; position: initial;">
-    <li><p class="練習">Dropdown header</p></li>
+    <li><p class="dropdown-header">Dropdown header</p></li>
     <li><a class="dropdown-item" href="#">Action</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
   </ul>
@@ -371,28 +374,29 @@
 
 <h4>Dividers</h4>
 
-<p>使用 hr 標籤搭配 .dropdown-divider 製作分隔線</p>
+<p> 使用 hr 標籤搭配 .dropdown-divider 製作分隔線 </p>
 
 <div class="demo">
   <ul class="dropdown-menu" style="display: block; position: initial;">
     <li><a class="dropdown-item" href="#">Action</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
     <li><a class="dropdown-item" href="#">Something else here</a></li>
-    <li><練習 class="練習"></li>
+    <!-- 會協助調整分隔線間距 -->
+    <li><hr class="dropdown-divider"></li>
     <li><a class="dropdown-item" href="#">Separated link</a></li>
   </ul>
 </div>
 
 <h4>Text</h4>
 
-<p>可以搭配 Utilities 自行排版樣式</p>
+<p> 可以搭配 Utilities 自行排版樣式 </p>
 
 <div class="demo">
-  <div class="dropdown-menu p-4 text-muted" style="max-width: 200px; display: block; position: initial;">
+  <div class="dropdown-menu p-4 text-muted border-danger" style="max-width: 200px; display: block; position: initial;">
     <p>
       Some example text that's free-flowing within the dropdown menu.
     </p>
-    <p class="mb-0">
+    <p class="mb-0 text-primary">
       And this is more example text.
     </p>
   </div>
@@ -400,7 +404,7 @@
 
 <h4>Forms</h4>
 
-<p>表單範例</p>
+<p> 表單範例 </p>
 
 <div class="demo">
   <div class="dropdown-menu" style="display: block; position: initial;">
@@ -430,12 +434,13 @@
 </div>
 
 <h2>Dropdown options</h2>
-<p>使用 <code>data-bs-offset</code> 或 <code>data-bs-reference</code> 來改變下拉選單的位置</p>
+<p> 使用 <code>data-bs-offset</code> 或 <code>data-bs-reference</code> 來改變下拉選單的位置 </p>
 
 <div class="demo">
   <div class="d-flex">
     <div class="dropdown me-1">
-      <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
+      <!-- data-bs-offset="10,50" 位移 x=10, y=50-->
+      <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,50">
       Offset
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
@@ -444,9 +449,24 @@
       <li><a class="dropdown-item" href="#">Something else here</a></li>
       </ul>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-secondary">Reference</button>
+    <div class="btn-group me-1">
+      <button type="button" class="btn btn-secondary">Reference(Parents)</button>
+      <!-- data-bs-reference="parent" 下拉選單對齊按鈕 -->
+      <!-- data-bs-reference="toggle" 下拉選單對齊三腳按鈕 -->
       <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
+      <span class="visually-hidden">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuReference">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary">Reference(Toggle)</button>
+      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="toggle">
       <span class="visually-hidden">Toggle Dropdown</span>
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuReference">
@@ -461,7 +481,7 @@
 </div>
 
 
-<h4>自動關閉的方法</h4>
+<h4> 自動關閉的方法 </h4>
 
 <div class="demo">
   <div class="btn-group">
@@ -487,8 +507,9 @@
   </div>
   
   <div class="btn-group">
+    <!-- (點擊內層邊框不會被關掉，只能點外面、按鍵本身) -->
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuClickableInside" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-      Clickable inside
+      Clickable inside 
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuClickableInside">
       <li><a class="dropdown-item" href="#">Menu item</a></li>
@@ -689,7 +710,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -702,7 +723,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -730,7 +751,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
