--- a/components/modal.html
+++ b/components/modal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Modal</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Modal</h1><small>檔名：<code>modal.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Modal</h1><small > 檔名：<code>modal.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Examples</h2>
 
@@ -35,16 +35,17 @@
 
 <h4>Live demo</h4>
 
-<p>啟用 Modal 功能</p>
+<p> 啟用 Modal 功能 </p>
 
 <ol>
-  <li>按鈕加上 data-bs-toggle="modal"</li>
-  <li>使用 href 或 data-bs-target 對應 modal ID</li>
-  <li>使用 data-bs-dismiss="modal" 關閉 Modal</li>
+  <li> 按鈕加上 data-bs-toggle="modal"</li>
+  <!-- 使用 a tag 使用 href -->
+  <li> 使用 href 或 data-bs-target 對應 modal ID</li>
+  <li> 使用 data-bs-dismiss="modal" 關閉 Modal</li>
 </ol>
 
 <div class="demo">
-  <button type="button" class="btn btn-primary" 練習>
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Launch demo modal
   </button>
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -52,13 +53,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" 練習 aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
         <div class="modal-body">
           ...
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" 練習>Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
@@ -67,13 +68,13 @@
 </div>
 
 <h4>Static backdrop</h4>
-<p>加入 data-bs-backdrop="static"，互動視窗不會因為點擊背景而關閉。</p>
+<p> 加入 data-bs-backdrop="static"，互動視窗不會因為點擊背景而關閉。</p>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Launch static backdrop modal
   </button>
-  <div class="modal fade" id="staticBackdrop" 練習 data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -92,7 +93,7 @@
   </div>
 </div>
 
-<h4>較長內容的滾動狀態</h4>
+<h4> 較長內容的滾動狀態 </h4>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#longModal">
@@ -118,14 +119,14 @@
   </div>
 </div>
 
-<p>可以透過在 <code>.modal-dialog</code> 中加入 <code>.modal-dialog-scrollable</code> 來創建一個 body 可滾動互動視窗。</p>
+<p> 可以透過在 <code>.modal-dialog</code> 中加入 <code>.modal-dialog-scrollable</code> 來創建一個 body 可滾動互動視窗。</p>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#scrollModal">
     Launch demo modal
   </button>
   <div class="modal fade" id="scrollModal" tabindex="-1" aria-labelledby="scrollModalLabel" aria-hidden="true">
-    <div class="modal-dialog 練習">
+    <div class="modal-dialog modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="scrollModalLabel">Modal title</h5>
@@ -145,7 +146,7 @@
 </div>
 
 <h4>Vertically centered</h4>
-<p>加入 <code>.modal-dialog-centered</code> 到 <code>.modal-dialog</code> 來使互動視窗垂直置中</p>
+<p> 加入 <code>.modal-dialog-centered</code> 到 <code>.modal-dialog</code> 來使互動視窗垂直置中 </p>
 
 <div class="demo">
   <!-- Vertically centered modal -->
@@ -153,7 +154,7 @@
     Vertically centered modal
   </button>
   <div class="modal fade" id="centerModal" tabindex="-1" aria-labelledby="centerModalLabel" aria-hidden="true">
-    <div class="modal-dialog 練習">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="centerModalLabel">Modal title</h5>
@@ -174,7 +175,7 @@
     Vertically centered scrollable modal
   </button>
   <div class="modal fade" id="centerScrollModal" tabindex="-1" aria-labelledby="centerScrollModalLabel" aria-hidden="true">
-    <div class="modal-dialog 練習 modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="centerScrollModalLabel">Modal title</h5>
@@ -194,7 +195,7 @@
   </div>
 </div>
 
-<h4>在兩個 Modal 中切換</h4>
+<h4> 在兩個 Modal 中切換 </h4>
 
 <div class="demo">
   <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Open first modal</a>
@@ -233,7 +234,7 @@
 </div>
 
 <h2>Optional sizes</h2>
-<p>在 modal-dialog 加入 modal-{xl, lg, sm} 來改變 modal 尺寸</p>
+<p> 在 modal-dialog 加入 modal-{xl, lg, sm} 來改變 modal 尺寸 </p>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#xlSizeModal">
@@ -248,7 +249,37 @@
 
   <!-- Extra large modal -->
   <div class="modal fade" id="xlSizeModal" tabindex="-1" aria-labelledby="xlSizeModalLabel" aria-hidden="true">
-    <div class="modal-dialog 練習">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="xlSizeModalLabel">Extra large modal</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+        <div class="modal-body">
+          ...
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Large modal -->
+  <div class="modal fade" id="lgSizeModal" tabindex="-1" aria-labelledby="xlSizeModalLabel" aria-hidden="true">
+    <!-- 改變尺寸 -->
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="xlSizeModalLabel">Extra large modal</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+        <div class="modal-body">
+          ...
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Small modal -->
+  <div class="modal fade" id="smSizeModal" tabindex="-1" aria-labelledby="xlSizeModalLabel" aria-hidden="true">
+    <!-- 改變尺寸 -->
+    <div class="modal-dialog modal-sm">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="xlSizeModalLabel">Extra large modal</h5>
@@ -264,7 +295,7 @@
 
 <h2>Fullscreen Modal</h2>
 
-<p>使用 modal-fullscreen 製作滿版 modal，或使用 modal-fullscreen-{中斷點}-down 在特定寬度下運行</p>
+<p> 使用 modal-fullscreen 製作滿版 modal，或使用 modal-fullscreen-{中斷點}-down 在特定寬度下運行 </p>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fullModal">
@@ -276,7 +307,7 @@
 
   <!-- Full screen -->
   <div class="modal fade" id="fullModal" tabindex="-1" aria-labelledby="fullModalLabel" aria-hidden="true">
-    <div class="modal-dialog 練習">
+    <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="fullModalLabel">Full screen</h5>
@@ -293,6 +324,7 @@
   </div>
   <!-- Full screen below .. -->
   <div class="modal fade" id="fullsmdownModal" tabindex="-1" aria-labelledby="fullsmdownModal" aria-hidden="true">
+    <!-- 剛好觀念顛倒，變成在 SM 以下的才會變 -->
     <div class="modal-dialog modal-fullscreen-sm-down">
       <div class="modal-content">
         <div class="modal-header">
@@ -490,7 +522,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -503,7 +535,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -531,7 +563,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
